tests/ui/reborrow/reborrow-source-unsafety.stderr
error[E0133]: call to unsafe function `std::ptr::read` is unsafe and requires unsafe function or block
  --> $DIR/reborrow-source-unsafety.rs:24:30
   |
LL |         std::hint::black_box(std::ptr::read(p));
   |                              ^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0133`.
